Makes initial drop area take up the entire container. Makes reordering items smooth and prevents jumps when dropping.

--- a/src/components/Screen/CourseEditorScreen/CourseOutlineLessonItem/style.module.scss
+++ b/src/components/Screen/CourseEditorScreen/CourseOutlineLessonItem/style.module.scss
@@ -1,6 +1,5 @@
 .course-outline-lesson-item {
   width: 100%;
-  margin-top: 15px;
   margin-bottom: 0;
   padding: 0;
 
